--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,14 @@ dependencies:
     sdk: flutter
   
   cupertino_icons: 0.1.3
+  json_annotation: 3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  json_serializable: 3.4.1
+  build_runner: 1.10.2
 
 flutter:
   uses-material-design: true
