--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: 0.1.3
   json_annotation: 3.0.1
   supercharged: 1.6.0
+  cached_network_image: 2.2.0+1
+  get_it: 4.0.2
 
 dev_dependencies:
   flutter_test:
