--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
-  cupertino_icons: 0.1.3
-  json_annotation: 3.0.1
-  supercharged: 1.6.0
-  cached_network_image: 2.2.0+1
-  get_it: 4.0.2
+
+  json_annotation: 3.1.1
+  supercharged: 1.11.1
+  cached_network_image: 2.3.3
+  get_it: 5.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  json_serializable: 3.4.1
-  build_runner: 1.10.2
+  json_serializable: 3.5.0
+  build_runner: 1.10.6
 
 flutter:
   uses-material-design: true
